--- a/victims/templates/victims/index.html
+++ b/victims/templates/victims/index.html
@@ -1,7 +1,7 @@
 {% extends "layout/base.html" %}
 {% block content %}
-
-
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
 <div class="container my-5">
     <div class="card">
@@ -29,9 +29,13 @@
                         <td>{{victim.pickup_location}}</td>
                         <td>{{victim.pickup_date }}</td>
                         <td>{{victim.description}}</td>
-                        <td> <a class="btn btn-primary my-1" href="{% url 'victims:update_view' victim.id %}">Edit Profile</a></td>
-                        <td> <a class="btn btn-primary my-1" href="{% url 'victims:add' %}">Send Alert</a></td>
-
+                        <td style="width: 0px; height: 0px;"> <a class="btn btn-primary my-1" href="{% url 'victims:update_view' victim.id %}"><i class="fas fa-pencil-alt"></i></a></td>
+                        <td style="width: 80px; height: 0px;">
+                            <a href="{% url 'victims:viewvicts' victim.id %}" class="btn btn-primary my-1">
+                                <i class="fas fa-eye"></i>
+                            </a>
+                        </td>
+                        <td > <a class="btn btn-primary my-1" href="{% url 'victims:add' %}">Go to Volunteer</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
