updated homepase with hospital

--- a/templates/layout/homepage.html
+++ b/templates/layout/homepage.html
@@ -47,17 +47,17 @@
             <a href="victims/victimsglobalview" class="btn btn-primary">View All Victims</a>
           </div>
         </div>
-        <!--</div>
+        </div>
         <div class="col" style="margin-top: 50px;">
         <div class="card" style="width: 18rem;">
           <img src="/media/volunteers_view.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">View All volunteer</h5>
-            <p class="card-text">View all volunteer details.</p>
-            <a href="volunteers/volunteersglobalview" class="btn btn-primary">View All volunteer</a>
+            <h5 class="card-title">View All Hospital</h5>
+            <p class="card-text">View all hospital details.</p>
+            <a href="hospital/index" class="btn btn-primary">Hospital</a>
           </div>
           </div>
-        </div>-->
+        </div>
         <!--<div class="col" style="margin-top: 50px;">
           <div class="card" style="width: 18rem;">
             <img src="/media/ngo.jpg" class="card-img-top" alt="...">
