--- a/victims/templates/victims/viewvictim.html
+++ b/victims/templates/victims/viewvictim.html
@@ -6,7 +6,8 @@
     <div class="card">
         <div class="card-header bg-dark text-white">Victim Details</div>
         <div class="card-body">
-            <h5 class="card-title">{{ object.first_name }} {{ object.last_name }}</h5>
+            <h5 class="card-title">{{ object.id }}</h5>
+            <p class="card-text">Name: {{ object.first_name}} {{ object.last_name}}</p>
             <p class="card-text">Age: {{ object.age }}</p>
             <p class="card-text">Gender: {{ object.gender }}</p>
             <p class="card-text">Pickup Location: {{ object.pickup_location }}</p>
