--- a/volunteers/templates/volunteers/index.html
+++ b/volunteers/templates/volunteers/index.html
@@ -43,8 +43,12 @@
                         <td>{{volunteer.ngo_association }}</td>
                         <td>{{volunteer.area_of_operation }}</td>
                         <td> <a class="btn btn-primary my-1" href="{% url 'volunteers:update_view' volunteer.id %}">Edit Profile</a></td>
+                        <td>
+                            <a class="btn btn-danger my-1" href="{% url 'volunteers:remove' volunteer.id %}" onclick="return confirm('Are you sure you want to remove this volunteer?')">
+                                <i class="fas fa-trash"></i>
+                            </a>
+                        </td>
                         <td> <a class="btn btn-primary my-1" href="{% url 'volunteers:add' %}">Send Alert</a></td>
-
                     </tr>
                     {% endfor %}
                 </tbody>
