--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -34,12 +34,11 @@
         </li>
         -->
       </ul>
-      <!--
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    -->
-    </div>
+      {% if user.is_authenticated %}
+          <a class="nav-link" href="{% url 'logout' %}">
+            <button class="btn btn-primary btn-sm" type="submit">Logout</button>
+          </a>
+      {% endif %}
+      </div>
   </div>
 </nav>
