Slightly better Global Timeline

--- a/timeline/templates/timeline/global_timeline.html
+++ b/timeline/templates/timeline/global_timeline.html
@@ -32,6 +32,7 @@
                                 <div class="card-body">
                                     <h3 class="card-title">{{ event.title }}</h3>
                                     <p class="card-text">{{ event.description }}</p>
+                                    <p class="card-text"><small class="text-muted">Action Performed By: {{ event.user.username }}</small></p>
                                     <p class="card-text"><small class="text-muted">{{ event.date }}</small></p>
                                 </div>  
                             </div>
