--- a/victims/templates/victims/index.html
+++ b/victims/templates/victims/index.html
@@ -35,7 +35,7 @@
                                 <i class="fas fa-eye"></i>
                             </a>
                         </td>
-                        <td > <a class="btn btn-primary my-1" href="{% url 'victims:add' %}">Go to Volunteer</a></td>
+                        <td> <button class="btn btn-primary" onclick="goToVolunteer('{{ victim.id }}', this)">Go to Volunteer</button> </td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -83,6 +83,36 @@
 {% endif %}
 </ul>
 </nav>
+
+<script>
+    function goToVolunteer(victimId, button) {
+        const authToken = '1048c555098c6f0000b114209a77fc3af853cd0b';
+
+        // Change button text and style
+        $(button).text('Sent to Volunteer').removeClass('btn-primary').addClass('btn-success');
+
+        // Set a timeout to revert the button text and style after 3.5 seconds
+        setTimeout(() => {
+            $(button).text('Go to Volunteer').removeClass('btn-success').addClass('btn-primary');
+        }, 3500);
+
+        // Make API call with the victim ID
+        fetch(`/victims/get_victim_details/${victimId}/`, {
+            headers: {
+                'Authorization': `Token ${authToken}`,
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log('API Response:', data);
+            // Handle the API response data
+        })
+        .catch(error => {
+            console.error('Error:', error);
+        });
+    }
+</script>
+
 {% endblock %}
 
 
