--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -35,6 +35,7 @@
         -->
       </ul>
       {% if user.is_authenticated %}
+        <span class="me-3 text-white">Welcome, {{ user.username }}!</span>
           <a class="nav-link" href="{% url 'logout' %}">
             <button class="btn btn-primary btn-sm" type="submit">Logout</button>
           </a>
