--- a/victims/templates/victims/victimsglobalview.html
+++ b/victims/templates/victims/victimsglobalview.html
@@ -44,8 +44,8 @@
                         <td>{{victim.pickup_location}}</td>
                         <td>{{victim.pickup_date }}</td>
                         <td style="width: 0px; height: 0px;"> <a class="btn btn-primary my-1" href="{% url 'victims:update_view' victim.id %}"><i class="fas fa-pencil-alt"></i></a></td>
-                        <td style="width: 80px; height: 0px;"><a href="{% url 'victims:viewvicts' victim.id %}" class="btn btn-primary my-1"><i class="fas fa-eye"></i></a></td>
-                    </tr>
+                        <td style="width: 0px; height: 0px;"><a href="{% url 'victims:viewvicts' victim.id %}" class="btn btn-primary my-1"><i class="fas fa-eye"></i></a></td>
+                        <td style="width: 0px; height: 0px;"><a href="{% url 'victims:victim_lifecycle_entry' victim.id %}" class="btn btn-primary my-1"><i class="fas fa-clock"></i></a></td </tr>
                     {% endfor %}
                 </tbody>
             </table>    
